streamline intro graf

--- a/writing/spp/generics-spp.tex
+++ b/writing/spp/generics-spp.tex
@@ -63,43 +63,44 @@
 
 Learning and development require solving problems of induction.
 To understand that swans are white, one must generalize the property \textsc{is white} to the category of swans.
-This hard problem can be overcome by young children by merely observing instances of the category \cite{Markman1989} or by being shown the same evidence pedagogically \cite<e.g.>{Shafto2012}.
-More to the point, a helpful interlocutor could just tell you \emph{Swans are white}. 
-This \emph{generic} sentence is a simple and convenient way to communicate the generalization \cite{Carlson1977, Leslie2008}. 
-Similar, simple sentences are used to communication generalizations about events, called \emph{habituals} (e.g.  Bill smoking a cigarette can be generalized over time with \emph{Bill smokes cigarettes}; \citeNP{Carlson2005, Cohen1999}). 
-Even statements about causality can be thought of as generalizing a particular cause--effect instance (e.g. Bill getting cancer as a result of smoking) over time and space  (e.g. \emph{Smoking causes cancer}).
-%and generalizations about causes---\emph{causals}generalizes over the instances where smoking was the cause of a cancer).
+Similarly, events can be generalized and made useful for future predictions of behavior and outcomes (e.g. Bill smokes cigarettes, Smoking causes cancer). 
+Observation and pedagogy are available methods early on in development for solving these inductive problems \cite{Markman1989, Shafto2012}.
+Around the age of two, generalizations get conveyed with language \cite{Cimpian2008, Gelman2008}. 
+%Adults and young children overcome this hard problem by merely observing instances of the category \cite{Markman1989} and potentially more robustly by being shown the same evidence pedagogically \cite<e.g.>{Shafto2012}.
+%More to the point, a helpful interlocutor could just tell you \emph{Swans are white}. 
 
+\emph{Generic} language is a simple and convenient way to communicate generalization about categories (e.g.~\emph{Swans are white}), and similar linguistic devices are available for generalizations about events (habituals, e.g. \emph{Bill smokes cigarettes}) and causes (causals, e.g. \emph{Smoking causes cancer}; \citeNP{Carlson1977, Carlson2005, Cohen1999, Leslie2008}). 
+%Similar, simple sentences are used to communication generalizations about events, called \emph{habituals} (e.g.  Bill smoking a cigarette can be generalized over time with ; \citeNP{}). 
+%Even statements about causality can be thought of as generalizing a particular cause--effect instance (e.g. Bill getting cancer as a result of smoking) over time and space  (e.g. \emph{Smoking causes cancer}).
+%and generalizations about causes---\emph{causals}generalizes over the instances where smoking was the cause of a cancer).
 %Similarly, it is useful to generalize particular events (e.g. \textsc{bill smoking a cigarette}) over time (e.g. \textsc{bill smokes cigarettes}), and generalize a cause that occurred in a particular place at a particular time (e.g. \textsc{bill's cancer was caused by smoking}) to a causal relationship that occurs invariant of space and time (e.g. \textsc{smoking causes cancer}).
 %Making such generalizations is tricky though can be achieved by adults and young children by learning from evidence
 %and, particularly so, in pedagogically enriched contexts \cite{Markman1989, Shafto2012}.
 %The task is made almost trivial, though, if the generalization is communicated with language (e.g. somebody tells you: \emph{Swans are white.}).
-
-
 %At about age of the two, a new tool for communication and learning becomes available: language.
 %Generalizations can be made about the properties of a category (e.g. \emph{Dogs are friendly}),
 %events that tend to occur 
 %and about causal relationships that tend to hold 
 %Generalizations may also be conveyed with language.
-Generic (e.g.~\emph{Swans are white}), habitual (e.g.~\emph{Bill smokes cigarettes}), and causal (e.g.~\emph{Smoking causes cancer}) language provide common and simple ways to communicate generalizations. 
+%Generic (e.g.~\emph{Swans are white}), habitual (e.g.~\emph{Bill smokes cigarettes}), and causal (e.g.~\emph{Smoking causes cancer}) language provide common and simple ways to communicate generalizations. 
 %We take category generalizations as our primary case study, extend our analysis to habitual language later, and speculate on causal language at the end. 
 %Generic language is ubiquitous in everyday conversation and in child-directed speech \cite{Gelman2008} and children as young as two or three understand that generics refer to categories and support generalization \cite{Cimpian2008}.
-Learning through generic statements, in particular, is thought to be essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}.
+Learning through generic statements, in particular, is essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}.
 %Similar processes may be occurring for habitual language with respect to drawing inferences about stable properties of individuals \cite{Gelman1999}.
-Despite the apparent simplicity of the language and their centrality to learning, a formal account of the generic meaning remains elusive. 
+Despite the apparent simplicity of the language and their centrality to learning, a formal account of generic meaning remains elusive. 
 
 The primary hurdle in formalizing generic language is in determining what makes a generic sentence true or false (i.e. the truth conditions).
 %Generics look a lot like quantifier statements (e.g. \emph{some, all, most}).
 At first blush, generics look a lot like universally quantified statements as in \emph{All swans are white}, and yet generics---unlike universals---admit exceptions (e.g. there are black swans). 
 Interpreting the generic as meaning ``most'' (i.e. \emph{Most swans are white}) captures many cases but fails to account for others: \emph{Robins lay eggs} seems true even though only adult, female robins do; only a tiny fraction of Mosquitos carry the virus Zika yet \emph{Mosquitos carry Zika} also sounds true. 
-In fact, the very notion that the felicity of the generic can be tied to how many instances have the property (in the way that quantifier statements are) violates intuitions: \emph{Robins lay eggs} even though only the females do but \emph{Robins are female} (even though only the females are) is not a reasonable thing to say.
+In fact, the very notion that the felicity of the generic can be tied to how many instances have the property (in the way that quantifier statements are) violates intuitions: \emph{Robins lay eggs} even though only the females do but \emph{Robins are female} is not a reasonable thing to say (even though only the females are).
 
 %Habitual sentences behave in an analogous way. 
 %Bill may smoke a pack a day and so we would say \emph{Bill smokes}, and if Bill goes without a cigarette for an entire family vacation (thus temporarily reducing his effective rate of smoking), we will not be so easily convinced (i.e. \emph{Bill smokes} is probably still true).
 %Cases like \emph{Mosquitos carry malaria} (wherein only a tiny percentage have the property) seem to parallel habitual sentences of rare actions like \emph{Susan writes novels}. Susan may only have written 3 novels in her life, but still this seems like a valid generalization to convey.
 
 We argue that the core meaning of generic and habitual sentences is simple but underspecified, and that general principles of pragmatic reasoning are responsible for establishing a precise meaning in context. 
-Building on recent probabilistic models of language understanding, we provide a formal model for the evaluation of generic sentences, which should in principle generalize to other generalizations conveyed in language (e.g. habituals, causals). 
+Building on recent probabilistic models of language understanding, we provide a formal model for the evaluation of generic sentences, which in principle generalize to other generalizations conveyed in language (e.g. habituals, causals). 
 This model explains the puzzling flexibility in truth conditions (e.g. \emph{Birds lay eggs} vs. \emph{Birds are female}; \emph{Mosquitos carry Zika}) in terms of diverse prior beliefs about properties.
 In Experiment 1, we elicit these priors experimentally and show that the resulting model predictions explain almost all of the variance in human truth judgments for familiar generic sentences.
 Experiment 2 demonstrates that the same model accounts for truth judgments for a wide range of habitual sentences, where frequency alone would fail.
@@ -120,7 +121,7 @@ Building on \citeA{Lassiter2013,Lassiter2015}, we posit that this threshold is n
 
 Using the Rational Speech-Acts framework \cite{Frank2012,Goodman2013}, 
 we model a speaker $S_2$ who reasons about a pragmatic listener $L_1$; this listener is considering the prevalence of a certain property within the category.
-The listener $L_1$ has uncertainty about the appropriate threshold for the generic in this context ($\tau \sim \text{Uniform}$(0,1)), and reasons about what an informative speaker $S_1$ would be likely to say. The hypothetical speaker $S_1$ in turn reasons about an idealized literal listener $L_0$, who has access to the threshold $\tau$ (i.e. $S_1$ believes $L_0$ will interpret him in exactly the way he means). 
+The listener $L_1$ doesn't know the appropriate threshold for the generic in this context ($\tau \sim \text{Uniform}$(0,1)), and reasons about what an informative speaker $S_1$ would be likely to say. The hypothetical speaker $S_1$ in turn reasons about an idealized literal listener $L_0$, who has access to the threshold $\tau$ (i.e. $S_1$ believes $L_0$ will interpret him in exactly the way he means). 
 Writing the prevalence as $x$, this leads to a set of equations:
 %
 \begin{eqnarray}
@@ -131,11 +132,11 @@ P_{L_{0}}(x \mid u, \tau) &\propto& {\delta_{\denote{u}(x, \tau)} P(x)}. \label{
 \end{eqnarray}
 %
 We take the pragmatic speaker $S_2$ to consider two utterances: the generic, with $\denote{u}(x, \tau) := x>\tau$, or nothing (staying silent), with $\denote{u}(x, \tau) := \text{True}$.
-Equation \ref{eq:S2} can then be interpreted as a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
+Equation \ref{eq:S2} can then be interpreted as a model of felicity or truth judgments \cite{Degen2014}.
 The speaker will choose to produce the generic when the true prevalence $x$ is more likely under $L_1$'s posterior given the generic than under her prior (implied by $S_2$ ``staying silent''). 
 A fully implemented version of the model can be found at \url{http://forestdb.org/models/generics.html}.
 
-This model is straightforwardly adapted to describe generalizations about events (e.g.~\emph{Bill smokes}), by specifying the underlying scale to be the rate with which a person does an action, or that person's \emph{propensity} of doing the action (e.g. Bill smokes cigarettes 4 times a day.) rather than the prevalence of the property. 
+Generalizations about events (e.g.~\emph{Bill smokes}) are modeled by specifying the underlying scale to be the rate with which an event occurs (e.g. Bill smokes cigarettes 4 times a day.) rather than the prevalence of the property. 
 The rest of the model is the same.
 
 
@@ -165,15 +166,15 @@ Experiment 1 ($n=100$) uses generic sentences of familiar categories (e.g.~\emph
 Experiment 2 ($n=150$) uses habitual sentences of novel characters (e.g.~\emph{Bill smokes cigarettes}) and presents information about the frequency with which the event has occurred in the past (e.g. Last week, Bill smoked cigarettes 3 times.). 
 For both of the experiments, we measure empirically the prior distribution $P(x)$ over prevalence ($n=60$) or propensity ($n=40$), respectively.
 %In both Experiment 1 and Experiment 2, we use the empirically elicited priors and the speaker $S_2$ model to predict the truth judgments of generic and habitual sentences, respectively. 
-In both cases, the speaker $S_2$ model explains almost all of the variance in human endorsements of generic and habitual sentences ($r^2(30) = 0.98$ and $r^2(93) = 0.94$, respectively; Figure \ref{fig:tj} Right facets) while using just the prevalence \emph{within} the particular category or the just propensity for the particular person explains relatively little of the data ($r^2(30) = 0.59$ and $r^2(93) = 0.33$; Figure \ref{fig:tj} Left facets).
+In both cases, the speaker $S_2$ model explains almost all of the variance in human endorsements of generic and habitual sentences ($r^2(30) = 0.98$ and $r^2(93) = 0.94$, respectively) while using just the prevalence \emph{within} the particular category or just the rate of the event explains relatively little of the data ($r^2(30) = 0.59$ and $r^2(93) = 0.33$; Figure \ref{fig:tj}).
 
 In Experiment 3, we present participants with the same stimuli as in Expt.~2 and include extra information that either enables (e.g. Yesterday, Bill bought a pack of cigarettes.) or disables (e.g. Yesterday, Bill decided to quit smoking) the event from occurring. 
 We measure participants' predictions ($n=120$) about the future frequency with which the target person will do the action (e.g. ``In the next week, how many times will Bill smoke cigarettes?'') and a set of different participants ($n=150$) rated the felicity of the habitual sentence. 
 The speaker model $S_2$ who attempts to communicate the past frequency explains almost none of the data $r^2(63)=0.02$ while the model that wants to communicate the future frequency explains much of the data $r^2(63)=0.91$.
 We also find that when no additional information is present, predicted frequency perfectly tracks past frequency (and so the two models have the same predictions for the data in Expt.~2).
 
-In sum, our model that decides if a generic sentence is a pragmatically useful way to describe a category (or if a habitual is a useful way to describe an individual's behavior) by taking into account the listener's prior beliefs about the property (or event)---how common it is and the likely prevalence (measured empirically)---explains the puzzling flexibility of truth conditions for generic and habitual language.
-This work provides a mathematical bridge between our intuitive theories of category's and people's behavior, and the words we use to describe them.
+In sum, our model that decides if a generic sentence is a pragmatically useful way to describe a category (or if a habitual is a useful way to describe an individual's behavior) by taking into account the listener's prior beliefs about the property (or event)---how common it is and the likely prevalence or frequency (measured empirically)---explains the puzzling flexibility of truth conditions for generic and habitual language.
+This work provides a formal bridge between our intuitive theories of categories and events, and the words we use to describe them.
 %We validated this model by eliciting felicity judgments for generic and habitual sentences covering diverse properties and activities (Expt.~1b, 2b).
 %To our knowledge, the experiments presented here are first empirical investigations into the truth conditions of habitual sentences and the first test of a formal model of habitual language.
 
